; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/transicc/extr_transicc.c_SetCGATSfld.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/transicc/extr_transicc.c_SetCGATSfld.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lQuantize = common dso_local global i64 0, align 8
@hIT8out = common dso_local global i32 0, align 4
@CGATSPatch = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [39 x i8] c"couldn't set '%s' on output cgats '%s'\00", align 1
@CGATSoutFilename = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*, i64)* @SetCGATSfld to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @SetCGATSfld(i32 %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i64, i64* @lQuantize, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %15

9:                                                ; preds = %3
  %10 = load i64, i64* %6, align 8
  %11 = sitofp i64 %10 to double
  %12 = fadd double %11, 5.000000e-01
  %13 = fptosi double %12 to i64
  %14 = call i64 @floor(i64 %13)
  store i64 %14, i64* %6, align 8
  br label %15

15:                                               ; preds = %9, %3
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* @hIT8out, align 4
  %18 = load i32, i32* @CGATSPatch, align 4
  %19 = load i8*, i8** %5, align 8
  %20 = load i64, i64* %6, align 8
  %21 = call i32 @cmsIT8SetDataDbl(i32 %16, i32 %17, i32 %18, i8* %19, i64 %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %27, label %23

23:                                               ; preds = %15
  %24 = load i8*, i8** %5, align 8
  %25 = load i32, i32* @CGATSoutFilename, align 4
  %26 = call i32 @FatalError(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), i8* %24, i32 %25)
  br label %27

27:                                               ; preds = %23, %15
  ret void
}

declare dso_local i64 @floor(i64) #1

declare dso_local i32 @cmsIT8SetDataDbl(i32, i32, i32, i8*, i64) #1

declare dso_local i32 @FatalError(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
